vertical alignment of select all checkbox fixed

--- a/client/www/css/page.css
+++ b/client/www/css/page.css
@@ -71,8 +71,7 @@ CHECKER
 ******************************/
 
 #checker .w_checker > input {
-	height: 14px;
-	margin: 4px 0;
+	margin: 0;
 	padding: 0;
 }
 
